# lance-huggingface

./: .gitignore  README.md
docs/: README.md  mkdocs.yml  pyproject.toml
docs/src/: .pages  examples.md  index.md
fineweb/: .gitignore  README.cohere_emb.md  README.md  dataprep.py  pyproject.toml
fineweb_edu/: HF_DATASET_CARD.md  README.md  dataprep.py  example.py  pyproject.toml
fineweb_edu_full/: README.md  dataprep.py  disk_usage_estimate.md  text_embedding_pipeline.py
laion-1M/: HF_DATASET_CARD.md  example.py
lerobot/: dataprep.py  pyproject.toml  upload_hub.py
openvid_hf/: HF_DATASET_CARD.md  README.md  dataprep.py  example.py  pyproject.toml
